# backend/src/modules/user/user.route.ts
@@ -16,7 +16,7 @@ userRoutes.patch(
 );
 userRoutes.get('/me', authenticateMiddleware, controller.getProfile);
 
-userRoutes.get('/list', validateRequest(validator.getUsersListSchema), controller.getUsersList);
+userRoutes.get('/all', validateRequest(validator.getUsersListSchema), controller.getUsersList);
 userRoutes.get('/', validateRequest(validator.getUsersListSchema), controller.getUsers);
 
 userRoutes.get('/:userId', validateRequest(validator.getUserByIdSchema), controller.getUserById);
